# routes/api.php
@@ -43,3 +43,6 @@ Route::delete('comment/{id}', 'Api\CommentController@delete');
 Route::post('follow/user/{username}', 'Api\FollowerController@create');
 Route::delete('follow/user/{follower}/user/{followed}', 'Api\FollowerController@delete');
 Route::get('follow/user/{follower}/user/{followed}', 'Api\FollowerController@is_following');
+
+// App
+Route::get('search/{data}', 'Api\AppController@search');
